--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,7 @@ minio:
   secret-key: miniopass
   bucket: user-files
   create-bucket-if-not-exists: true
+
+spring.servlet.multipart:
+  max-file-size: 50MB
+  max-request-size: 50MB
